// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NamespaceTile renderes in selected state 1`] = `
<div
  className="flex-box flex-tile namespace selected"
  onClick={[Function]}
>
  <p
    className="title"
  />
  <hr />
</div>
`;

exports[`NamespaceTile renders with minimum data 1`] = `
<div
  className="flex-box flex-tile namespace"
  onClick={[Function]}
>
  <p
    className="title"
  />
  <hr />
</div>
`;
